[tool.poetry]
name = "sanctumlabs-dbkit"
# This version field is not being used. The version field is dynamically updated as below
version = "0.0.0"
description = "A wrapper for database libraries which bakes in common database functionality."
authors = ["BrianLusina <12752833+BrianLusina@users.noreply.github.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12.0"
sqlalchemy = "^2.0.29"
sqlalchemy-utils = "^0.41.1"
inflection = "^0.5.1"
wrapt = "^1.16.0"
orjson = "^3.10.3"
pydantic = "^2.0"
uuid = "^1.30"

[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"
pytest = "^8.1.1"
black = ">=24.3,<26.0"
pre-commit = ">=3.6.2,<5.0.0"
flake8 = "^7.0.0"
mypy = "^1.9.0"
coverage = "^7.4.4"
pytest-cov = ">=4.1,<7.0"
twine = ">=5,<7"
isort = ">=5.13.2,<7.0.0"
autoflake = "^2.3.1"
types-sqlalchemy-utils = "^1.0.1"
psycopg2-binary = "^2.9.9"
ruff = ">=0.5.0,<0.12.0"

[tool.mypy]
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_reexport = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
ignore_missing_imports = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "wrapt.*"
ignore_missing_imports = true

# reference: https://github.com/mtkennerly/poetry-dynamic-versioning
[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
latest-tag = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
